# theme

./: .gitignore  CMakeLists.txt  ReadMe.md  compile_commands.json  config.md  file1.txt  mocha.json  plans.md  reload.sh
examples/: ReadMe.md  example-config.conf  examples.md
examples/example-output/kitty/: colors.conf
examples/example-output/vs-code/: colors.json
examples/example-output/waybar/: colors.conf
include/: color256.h  config.h  config_parser.h  constants.h  helpers.h
src/: color256.cpp  config.cpp  config_parser.cpp  helpers.cpp  main.cpp
